--- a/.github/workflows/check_lint_build.yaml
+++ b/.github/workflows/check_lint_build.yaml
@@ -14,7 +14,7 @@ env:
 jobs:
   benchmarks:
     name: Benchmarks
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-large
     # needs: [check-lint]
     steps:
       - uses: actions/checkout@v4
