--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -49,6 +49,7 @@ semver = { version = "1.0.25", features = ["serde"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_with = { version = "3.4.0" }
+smallvec = { version = "1.13.2", features = ["write"] }
 sneed = { version = "0.0.11", features = ["observe"] }
 strum = { workspace = true }
 temp-dir = { version = "0.2.0", optional = true }
